--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     </style>
   </head>
   <body>
-    <img src="header.png">
-    <img src="hero.png">
-    <img src="clasica.png">
+    <img src="nueva_imagen.png">
   </body>
 </html>
